--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 #   git config --global core.excludesfile '~/.gitignore_global'
 
 # Ignore bundler config.
-/.bundle
+.bundle
 
 # Ignore all logfiles and tempfiles.
 /log/*
@@ -14,23 +14,21 @@
 !/tmp/.keep
 
 # Ignore uploaded files in development
-/storage/*
+storage/*
 
-/node_modules
-/yarn-error.log
+node_modules
+yarn-error.log
 
-/public/assets
+public/assets
 .byebug_history
 
 # Ignore master key for decrypting credentials and more.
-/config/master.key
+config/master.key
 
 # Ignore application configuration
-/config/application.yml
+config/application.yml
 
-/config/credentials.yml.enc.29900
-/config/credentials.yml.enc.29600
-/config/credentials.yml.enc
+config/credentials.yml.enc.*
 
-/config/initializers/AWS_CONFIG.rb
+config/initializers/AWS_CONFIG.rb
 
